@@ -7,6 +7,7 @@ ctags-5.1.1 (Wed Dec 12 2001)
 * Fixed regex tag problem which left newlines in back-references.
 * Fixed missing class-qualified tags [Eiffel].
 * Fixed spurious tags for entries in final indexing clause [Eiffel].
+* Fixed problem with invalid filenames in preprocessor line directives.
 
 ctags-5.1 (Tue Nov 06 2001)
 * Changed name of option configuration files for MSDOS, MSWindows, and OS/2.
